src/test/ui/hr-subtype/hr-subtype.bound_co_a_co_b_ret_contra_a.stderr
warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:32:29
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                           ----^^
   |                           |
   |                           help: elide the unused lifetime
...
LL | / check! { bound_co_a_co_b_ret_contra_a: (for<'a,'b> fn(Co<'a>, Co<'b>) -> Contra<'a>,
LL | |                                         for<'a>    fn(Co<'a>, Co<'a>) -> Contra<'a>) }
   | |______________________________________________________________________________________- in this macro invocation
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:38:31
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                             ----^^
   |                             |
   |                             help: elide the unused lifetime
...
LL | / check! { bound_co_a_co_b_ret_contra_a: (for<'a,'b> fn(Co<'a>, Co<'b>) -> Contra<'a>,
LL | |                                         for<'a>    fn(Co<'a>, Co<'a>) -> Contra<'a>) }
   | |______________________________________________________________________________________- in this macro invocation

error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ expected concrete lifetime, found bound lifetime parameter 'a
...
LL | / check! { bound_co_a_co_b_ret_contra_a: (for<'a,'b> fn(Co<'a>, Co<'b>) -> Contra<'a>,
LL | |                                         for<'a>    fn(Co<'a>, Co<'a>) -> Contra<'a>) }
   | |______________________________________________________________________________________- in this macro invocation
   |
   = note: expected type `std::option::Option<for<'a, 'b> fn(Co<'a>, Co<'b>) -> Contra<'a>>`
              found type `std::option::Option<for<'a> fn(Co<'a>, Co<'a>) -> Contra<'a>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
